--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,12 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+audio::-webkit-media-controls-play-button,
+audio::-webkit-media-controls-panel {
+
+  background-color: #4C7F9E;
+  
+}
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
